Bug 323669 - percent attribute values in userSpace gradients don't work. r=scootermorris