layout/svg/base/src/nsSVGGradientFrame.cpp
@@ -153,6 +153,7 @@ protected:
 
   nsSVGGradientFrame                     *mNextGrad;
   PRBool                                  mLoopFlag;
+  nsCOMPtr<nsIContent>                    mSourceContent;
 
 private:
   // Cached values
@@ -534,6 +535,10 @@ nsSVGGradientFrame::GetGradientTransform(nsIDOMSVGMatrix **aGradientTransform,
       NS_NewSVGMatrix(getter_AddRefs(bboxTransform),
                       width, 0, 0, height, x, y);
     }
+  } else {
+    nsIFrame *frame = nsnull;
+    CallQueryInterface(aSource, &frame);
+    mSourceContent = frame->GetContent();
   }
 
   if (!bboxTransform)
@@ -865,7 +870,18 @@ nsSVGLinearGradientFrame::GetX1(float *aX1)
       return NS_ERROR_FAILURE;
     NS_ADD_SVGVALUE_OBSERVER(mX1);
   }
-  mX1->GetValue(aX1);
+
+  // Object bounding box units are handled by setting the appropriate
+  // transform in GetGradientTransfrom, but we need to handle user
+  // space units as part of the individual Get* routines.  Fixes 323669.
+
+  PRUint16 bbox;
+  GetGradientUnits(&bbox);
+  if (bbox == nsIDOMSVGGradientElement::SVG_GRUNITS_OBJECTBOUNDINGBOX) {
+    mX1->GetValue(aX1);
+  } else {
+    *aX1 = nsSVGUtils::UserSpace(mSourceContent, mX1, nsSVGUtils::X);
+  }
   return NS_OK;
 }
 
@@ -878,7 +894,13 @@ nsSVGLinearGradientFrame::GetY1(float *aY1)
       return NS_ERROR_FAILURE;
     NS_ADD_SVGVALUE_OBSERVER(mY1);
   }
-  mY1->GetValue(aY1);
+  PRUint16 bbox;
+  GetGradientUnits(&bbox);
+  if (bbox == nsIDOMSVGGradientElement::SVG_GRUNITS_OBJECTBOUNDINGBOX) {
+    mY1->GetValue(aY1);
+  } else {
+    *aY1 = nsSVGUtils::UserSpace(mSourceContent, mY1, nsSVGUtils::Y);
+  }
   return NS_OK;
 }
 
@@ -891,7 +913,13 @@ nsSVGLinearGradientFrame::GetX2(float *aX2)
       return NS_ERROR_FAILURE;
     NS_ADD_SVGVALUE_OBSERVER(mX2);
   }
-  mX2->GetValue(aX2);
+  PRUint16 bbox;
+  GetGradientUnits(&bbox);
+  if (bbox == nsIDOMSVGGradientElement::SVG_GRUNITS_OBJECTBOUNDINGBOX) {
+    mX2->GetValue(aX2);
+  } else {
+    *aX2 = nsSVGUtils::UserSpace(mSourceContent, mX2, nsSVGUtils::X);
+  }
   return NS_OK;
 }
 
@@ -904,7 +932,13 @@ nsSVGLinearGradientFrame::GetY2(float *aY2)
       return NS_ERROR_FAILURE;
     NS_ADD_SVGVALUE_OBSERVER(mY2);
   }
-  mY2->GetValue(aY2);
+  PRUint16 bbox;
+  GetGradientUnits(&bbox);
+  if (bbox == nsIDOMSVGGradientElement::SVG_GRUNITS_OBJECTBOUNDINGBOX) {
+    mY2->GetValue(aY2);
+  } else {
+    *aY2 = nsSVGUtils::UserSpace(mSourceContent, mY2, nsSVGUtils::Y);
+  }
   return NS_OK;
 }
 
@@ -1101,7 +1135,13 @@ nsSVGRadialGradientFrame::GetFx(float *aFx)
       return NS_ERROR_FAILURE;
     NS_ADD_SVGVALUE_OBSERVER(mFx);
   }
-  mFx->GetValue(aFx);
+  PRUint16 bbox;
+  GetGradientUnits(&bbox);
+  if (bbox == nsIDOMSVGGradientElement::SVG_GRUNITS_OBJECTBOUNDINGBOX) {
+    mFx->GetValue(aFx);
+  } else {
+    *aFx = nsSVGUtils::UserSpace(mSourceContent, mFx, nsSVGUtils::X);
+  }
   return NS_OK;
 }
 
@@ -1114,7 +1154,13 @@ nsSVGRadialGradientFrame::GetFy(float *aFy)
       return NS_ERROR_FAILURE;
     NS_ADD_SVGVALUE_OBSERVER(mFy);
   }
-  mFy->GetValue(aFy);
+  PRUint16 bbox;
+  GetGradientUnits(&bbox);
+  if (bbox == nsIDOMSVGGradientElement::SVG_GRUNITS_OBJECTBOUNDINGBOX) {
+    mFy->GetValue(aFy);
+  } else {
+    *aFy = nsSVGUtils::UserSpace(mSourceContent, mFy, nsSVGUtils::Y);
+  }
   return NS_OK;
 }
 
@@ -1127,7 +1173,13 @@ nsSVGRadialGradientFrame::GetCx(float *aCx)
       return NS_ERROR_FAILURE;
     NS_ADD_SVGVALUE_OBSERVER(mCx);
   }
-  mCx->GetValue(aCx);
+  PRUint16 bbox;
+  GetGradientUnits(&bbox);
+  if (bbox == nsIDOMSVGGradientElement::SVG_GRUNITS_OBJECTBOUNDINGBOX) {
+    mCx->GetValue(aCx);
+  } else {
+    *aCx = nsSVGUtils::UserSpace(mSourceContent, mCx, nsSVGUtils::X);
+  }
   return NS_OK;
 }
 
@@ -1140,7 +1192,13 @@ nsSVGRadialGradientFrame::GetCy(float *aCy)
       return NS_ERROR_FAILURE;
     NS_ADD_SVGVALUE_OBSERVER(mCy);
   }
-  mCy->GetValue(aCy);
+  PRUint16 bbox;
+  GetGradientUnits(&bbox);
+  if (bbox == nsIDOMSVGGradientElement::SVG_GRUNITS_OBJECTBOUNDINGBOX) {
+    mCy->GetValue(aCy);
+  } else {
+    *aCy = nsSVGUtils::UserSpace(mSourceContent, mCy, nsSVGUtils::Y);
+  }
   return NS_OK;
 }
 
@@ -1153,7 +1211,13 @@ nsSVGRadialGradientFrame::GetR(float *aR)
       return NS_ERROR_FAILURE;
     NS_ADD_SVGVALUE_OBSERVER(mR);
   }
-  mR->GetValue(aR);
+  PRUint16 bbox;
+  GetGradientUnits(&bbox);
+  if (bbox == nsIDOMSVGGradientElement::SVG_GRUNITS_OBJECTBOUNDINGBOX) {
+    mR->GetValue(aR);
+  } else {
+    *aR = nsSVGUtils::UserSpace(mSourceContent, mR, nsSVGUtils::XY);
+  }
   return NS_OK;
 }
 
